2009-07-31  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (line-move-finish): Pass whole number to
	line-move-to-column.

2009-07-30  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-mode.el (calc-matrix-brackets): Remove "P" from prompt.

2009-07-29  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-defs.el (c-version): Bump to 5.31.7.

2009-07-29  Dmitry Dzhus  <dima@sphinx.net.ru>

	* progmodes/gdb-mi.el (gdb-goto-breakpoint)
	(gdb-place-breakpoints): Use full path when setting breakpoints.

2009-07-29  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (calc-mode-map): Add keybinding for
	`calc-transpose-lines'.

2009-07-29  Vincent Belaïche <vincent.belaiche@gmail.com>

	* calc/calc-misc.el (calc-transpose-lines): New function.

2009-07-28  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-do-copy-or-rename-file): Add messages.
	Simplify check for out-of-band methods.
	(tramp-do-copy-or-rename-file-out-of-band): Allow both files to be
	remote.  Remove messages which are in `tramp-do-copy-or-rename-file'.

2009-07-28  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el (vc-git-checkin): Fix typo.

2009-07-28  Steve Yegge  <steve.yegge@gmail.com>>

	* progmodes/js2-mode.el: New file.

2009-07-28  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (jdb): Add gud-pstar to dump object information.
	(gud-menu-map): Adjust tooltip accordingly.

2009-07-27  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-bzr.el (vc-bzr-print-log): Pass multiple arguments to bzr log.
	(vc-bzr-log-view-mode): Adjust log-view-file-re.

	* add-log.el (change-log-mode-map): Add a menu.

2009-07-27  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-call-method-non-blocking): Handle the case the
	function returns nil.
	(dbus-handle-event): Handle special return value :ignore.
	Reported by Jan Moringen <jan.moringen@uni-bielefeld.de>.

2009-07-26  Chong Yidong  <cyd@stupidchicken.com>

	* view.el (view-mode-enable): Don't define Helper-return-blurb if